<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/redBackground"
    tools:context=".view.MainActivity"
    >


    <ImageView
        android:id="@+id/bViewSessions"
        android:layout_width="417dp"
        android:layout_height="158dp"
        android:layout_marginTop="408dp"
        android:contentDescription="@string/training_sessions"
        android:src="@drawable/viewsessions_pressable"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/viewsessions" />

    <ImageView
        android:id="@+id/bCalculator"
        android:layout_width="416dp"
        android:layout_height="158dp"
        android:layout_marginTop="588dp"
        android:contentDescription="@string/calculator"
        android:src="@drawable/calculator_pressable"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/calculator"
        tools:srcCompat="@drawable/calculator" />

    <ImageView
        android:id="@+id/bTrain"
        android:layout_width="417dp"
        android:layout_height="158dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/train"
        android:src="@drawable/train_pressable"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/train" />

    <ImageView
        android:id="@+id/bViewProgram"
        android:layout_width="419dp"
        android:layout_height="158dp"
        android:layout_marginTop="228dp"
        android:contentDescription="@string/view_program"
        android:src="@drawable/viewprogram_pressable"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/viewprogram" />
</androidx.constraintlayout.widget.ConstraintLayout>