<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueBackground"
    tools:context=".view.mainMenu.CalculatorActivity">

    <TextView
        android:id="@+id/WorkingSetTitle"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:ems="10"
        android:fontFamily="@font/charleswrightbold"
        android:inputType=""
        android:shadowColor="@color/text_shadow"
        android:shadowDx="4"
        android:shadowDy="2"
        android:shadowRadius="5"
        android:singleLine="true"
        android:text="@string/working_set_calculator"
        android:textAlignment="center"
        android:textColor="@color/greenFont"
        android:textSize="30sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/oneRepMaxInput"
        app:layout_constraintDimensionRatio="330:50"
        app:layout_constraintTop_toBottomOf="@id/middle"
        app:layout_constraintEnd_toEndOf="@id/ttl2"
        app:layout_constraintStart_toStartOf="@id/ttl1"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/WorkingSetLabel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="2dp"
        android:fontFamily="@font/charleswrightbold"
        android:inputType=""
        android:shadowColor="@color/text_shadow"
        android:shadowDx="4"
        android:shadowDy="2"
        android:shadowRadius="5"
        android:singleLine="true"
        android:text="@string/working_set"
        android:textColor="@color/greenFont"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/calculatePercentageButton"
        app:layout_constraintDimensionRatio="160:25"
        app:layout_constraintEnd_toEndOf="@id/ttl2"
        app:layout_constraintStart_toStartOf="@id/inputGL"
        app:layout_constraintTop_toBottomOf="@+id/oneRepMaxInput"
        tools:visibility="visible" />

    <Button
        android:id="@+id/calculatePercentageButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toTopOf="@+id/end2"
        app:layout_constraintDimensionRatio="140:50"
        app:layout_constraintEnd_toEndOf="@id/buttonGL"
        app:layout_constraintStart_toStartOf="@id/ttl1"
        app:layout_constraintTop_toBottomOf="@+id/percentage"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/percentage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/percentage"
        android:importantForAutofill="no"
        android:inputType="numberSigned|numberDecimal"
        android:text=""
        android:textAlignment="textStart"
        android:textColor="@color/whiteLight"
        android:textColorHint="@color/whiteDark"
        android:textSize="18sp"
        android:visibility="visible"
        android:layout_marginRight="2dp"
        app:layout_constraintDimensionRatio="76:36"
        app:layout_constraintTop_toBottomOf="@id/oneRepMaxInput"
        app:layout_constraintEnd_toEndOf="@id/inputGL"
        app:layout_constraintStart_toStartOf="@id/ttl1"
        app:layout_constraintBottom_toTopOf="@id/calculatePercentageButton" />

    <EditText
        android:id="@+id/oneRepMaxInput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="One Rep Max"
        android:importantForAutofill="no"
        android:inputType="numberSigned|numberDecimal"
        android:text=""
        android:textAlignment="textStart"
        android:textColor="@color/whiteLight"
        android:textColorHint="@color/whiteDark"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/percentage"
        app:layout_constraintDimensionRatio="33:5"
        app:layout_constraintEnd_toEndOf="@id/ttl2"
        app:layout_constraintStart_toStartOf="@id/ttl1"
        app:layout_constraintTop_toBottomOf="@+id/WorkingSetTitle" />

    <TextView
        android:id="@+id/oneRepMaxLabel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="2dp"
        android:fontFamily="@font/charleswrightbold"
        android:inputType=""
        android:shadowColor="@color/text_shadow"
        android:shadowDx="4"
        android:shadowDy="2"
        android:shadowRadius="5"
        android:singleLine="true"
        android:text="@string/one_rep_max"
        android:textColor="@color/whiteLight"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/calculateOneRepMaxButton"
        app:layout_constraintDimensionRatio="160:25"
        app:layout_constraintEnd_toEndOf="@id/ttl2"
        app:layout_constraintTop_toBottomOf="@id/kilogramsInput"
        app:layout_constraintStart_toEndOf="@id/inputGL"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/repsInput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/reps"
        android:layout_marginRight="2dp"
        android:importantForAutofill="no"
        android:inputType="numberSigned|numberDecimal"
        android:text=""
        android:textAlignment="textStart"
        android:textColor="@color/whiteLight"
        android:textColorHint="@color/whiteDark"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintDimensionRatio="76:36"
        app:layout_constraintEnd_toStartOf="@+id/inputGL"
        app:layout_constraintBottom_toTopOf="@id/calculateOneRepMaxButton"
        app:layout_constraintStart_toStartOf="@id/ttl1"
        app:layout_constraintTop_toBottomOf="@id/kilogramsInput"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/kilogramsInput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/kilograms"
        android:inputType="numberSigned|numberDecimal"
        android:text=""
        android:textAlignment="textStart"
        android:textColor="@color/whiteLight"
        android:textColorHint="@color/whiteDark"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/repsInput"
        app:layout_constraintDimensionRatio="33:5"
        app:layout_constraintEnd_toEndOf="@id/ttl2"
        app:layout_constraintStart_toStartOf="@id/ttl1"
        app:layout_constraintTop_toBottomOf="@+id/calcTitle"
        tools:ignore="TouchTargetSizeCheck"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/calcTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/charleswrightbold"
        android:inputType=""
        android:shadowColor="@color/text_shadow"
        android:shadowDx="4"
        android:shadowDy="2"
        android:shadowRadius="5"
        android:singleLine="true"
        android:text="@string/one_rep_max_calculator"
        android:textAlignment="center"
        android:textColor="@color/whiteLight"
        android:textSize="30sp"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/kilogramsInput"
        app:layout_constraintDimensionRatio="330:50"
        app:layout_constraintEnd_toEndOf="@id/ttl2"
        app:layout_constraintStart_toStartOf="@id/ttl1"
        tools:visibility="visible" />

    <Button
        android:id="@+id/calculateOneRepMaxButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toTopOf="@id/end1"
        app:layout_constraintDimensionRatio="140:50"
        app:layout_constraintEnd_toEndOf="@id/buttonGL"
        app:layout_constraintStart_toStartOf="@id/ttl1"
        app:layout_constraintTop_toBottomOf="@id/repsInput" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/ttl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.09" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/ttl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.91" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/buttonGL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/inputGL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />


</androidx.constraintlayout.widget.ConstraintLayout>